# notPlanchas-discord-bot

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
config/: decrypt.py  encrypt.py  secrets.py.aes
