[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["notPlancha <andre.plancha@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyAesCrypt = "^6.0.0"
pre-commit = "^2.20.0"
black = "^22.10.0"
py-cord = {git = "https://github.com/Pycord-Development/pycord"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
