[tool.poetry]
name = "notPlancha's discord bot"
version = "0.1.0"
description = "notPlancha's discord bot"
authors = ["notPlancha <andre.plancha@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyAesCrypt = "^6.0.0"
pre-commit = "^2.20.0"
black = "^22.10.0"
"discord.py-message-components" = {git = "https://github.com/mccoderpy/discord.py-message-components.git", rev = "developer"}
"discord.py" = "^2.0.1"
discord-py-interactions = "^4.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
